--- a/template.html
+++ b/template.html
@@ -35,7 +35,7 @@
     <body>
         <!-- Preloader -->
 
-        <div id="loading">
+        <!-- <div id="loading">
             <div id="loading-center">
                 <div id="loading-center-absolute">
                     <div class="object"></div>
@@ -50,7 +50,7 @@
                     <div class="object"></div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!--End off Preloader -->
 
